tests/paczka1/fuzzy1/27957073.err
Error in line 1: X4u6A250 S826 94,3
Error in line 16: 59nK A217 90,7
Error in line 18: A299 A902 0,6
Error in line 17: 59nK S826 2,9
Error in line 26: 59nK A217 7,6
Error in line 28: 59nK A902 91,4
